--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -189,11 +189,17 @@ h1{
   }
 }
 
+
 @media (max-width: 350px) {
   .hero-banner {
     margin-top: 10px !important;
     margin-left: 0px !important;
   }
+}
+@media (max-width: 311px) {
+  .section-title {
+    letter-spacing: 0px;
+}
 }
 
 /******************* animation for welcoming  ******************/
