--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -197,8 +197,17 @@ h1{
   }
 }
 @media (max-width: 311px) {
-  .section-title {
+ ::ng-deep .section-title {
     letter-spacing: 0px;
+    font-size: 2em;
+}
+.h1{
+    font-size: 2.5em;
+}
+.btn {
+
+  letter-spacing: 1px;
+  padding: 7px 5px;
 }
 }
 
