--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -199,12 +199,12 @@ h1{
 }
 @media (max-width: 300px) {
 
-  ::ng-deep .section-title {
+  .section-title {
     letter-spacing: 0px;
     font-size: 1.5em;
 }
  h1{
-    font-size: 2.5em;
+    font-size: 0.5em;
 }
 .hero-subtitle {letter-spacing: 1px;}
 .btn {
