--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -198,13 +198,15 @@ h1{
 
 }
 @media (max-width: 400px) {
-
+  .hero-banner {
+    margin-left: 50px !important;
+}
   .section-title {
     letter-spacing: 0px;
-    font-size: 1.5em;
+    font-size: 2em;
 }
  h1{
-    font-size: 0.5em;
+    font-size: 2.5em;
 }
 .hero-subtitle {letter-spacing: 1px;}
 .btn {
